# ase-client-explorer

./: CMakeLists.txt  README.md  VERSION  build.sh
include/explorer/: app_catalog.hpp  breadcrumb.hpp  clipboard_ops.hpp  context_menu.hpp  exclude.hpp  explorer_settings.hpp  extension_scan.hpp  file_associations.hpp  file_watcher.hpp  folder_picker.hpp  icons.hpp  keyboard_shortcuts.hpp  open_with_dialog.hpp  search_bar.hpp  settings_dialog.hpp  submodule.hpp  theme.hpp  tree_view.hpp  types.hpp  version.hpp.in  window.hpp
packaging/: PKGBUILD  ase-explorer.desktop
src/: app_catalog.cpp  breadcrumb.cpp  clipboard_ops.cpp  context_menu.cpp  exclude.cpp  explorer_settings.cpp  extension_scan.cpp  file_associations.cpp  file_watcher.cpp  folder_picker.cpp  icons.cpp  keyboard_shortcuts.cpp  main.cpp  open_with_dialog.cpp  search_bar.cpp  settings_dialog.cpp  submodule.cpp  theme.cpp  tree_view.cpp  window.cpp
